# bmcpp

./: CMakeLists.txt  LICENSE  README.md  array.hpp  cpp-rt.hpp  hashmap.hpp  list.hpp  string.hpp
include/bmcpp/: array.hpp  cpp-rt.hpp  hashmap.hpp  lambda.hpp  list.hpp  object.hpp  string.hpp
test/: compile-test.cpp  list.cpp
